[metadata]
name = split_nlogo_experiment
version = attr: split_nlogo_experiment.__version__
description = Splits NetLogo BehaviorSpace experiments, creating one XML setup file per possible variable value combination.
long_description = file: LONG_DESCRIPTION.md, README.md
long_description_content_type = text/markdown
url = https://github.com/ahrenberg/split_nlogo_experiment
author = Lukas Ahrenberg, David Chin
author_email = lukas@ahrenberg.se
license = GPLv3
license_files = LICENSE
platforms = Linux
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: System :: Distributed Computing
    Programming Language :: Python :: 3
keywords = netlogo, hpc, slurm

[options]
packages = split_nlogo_experiment
install_requires =
    importlib; python_version >= "3.6"

[options.entry_points]
console_scripts =
    split_nlogo_experiment = split_nlogo_experiment:split_nlogo_experiment
